--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <img src="img/facepaylas.jpg"/>
 </a>
 </span></div>
-<div class="baslik"><span>Tatil Hayalleri Başlasın!</span></div>
+<div class="baslik"><span>Emre Birinci.</span></div>
 <form action="tatilformu_islem.php" method="POST">
 <div class="solform">
 <fieldset>
